2006-08-21  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: We want I420, nothing else
	for now.

2006-05-15  Wim Taymans  <wim@fluendo.com>

      * ext/pitfdll/dmo_adec.c: (dmo_audiodec_change_state):
      * ext/pitfdll/dmo_aenc.c: (dmo_audioenc_change_state),
      (dmo_audioenc_sink_event):
      * ext/pitfdll/dmo_vdec.c: (dmo_videodec_change_state):
      * ext/pitfdll/dmo_venc.c: (dmo_videoenc_change_state),
      (dmo_videoenc_sink_event):
      * ext/pitfdll/dshow_vdec.c: (dshow_videodec_change_state),
      (dshow_videodec_sink_event):
      * ext/pitfdll/qt_adec.c: (qt_audiodec_sink_setcaps),
      (qt_audiodec_chain), (qt_audiodec_change_state),
      (qt_audiodec_sink_event):
      Fix state changes.
      Pass on flush event in qt audio decoder.
      Use right function to get contents f codec_data in qt
      audio.

2006-04-21  Julien MOUTTE  <julien@moutte.net>

	Patch by: Jens Granseuer <jensgr@gmx.net>

	* configure.ac:
	* ext/pitfdll/Makefile.am: Add --with-dlldir to configure.

2006-04-05  Julien MOUTTE  <julien@moutte.net>

	Patch by: Fabrizio Gennari <fabrizio.ge@tiscali.it>

	* .cvsignore:
	* ext/.cvsignore:
	* ext/pitfdll/.cvsignore:
	* ext/pitfdll/dshow_vdec.c:
	* gst-libs/.cvsignore:
	* gst-libs/ext/.cvsignore:
	* gst-libs/ext/loader/.cvsignore:
	* gst-libs/ext/loader/dmo/.cvsignore:
	* gst-libs/ext/loader/dshow/.cvsignore:
	* gst-libs/ext/loader/dshow/DS_VideoDecoder.c:
	(DS_VideoDecoder_StartInternal):
	* gst-libs/ext/loader/qtx/.cvsignore:
	* gst-libs/ext/loader/qtx/qtxsdk/.cvsignore:
	* gst-libs/ext/loader/wine/.cvsignore: Adding cvs ignore files,
	and add support for Indeo 4 videos.

2006-03-12  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_chain): Fix Speech codec
	mime type and debug output. We now use audio/x-wms.

2006-01-19  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_event):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_sink_event):